# 3V1L_4NT1V1RUS

./: .gitignore  CMakeLists.txt  README.md  addfiletodbdialog.cpp  addfiletodbdialog.h  addfiletodbdialog.ui  analizerseparated.cpp  analizerseparated.h  antivirus.cpp  antivirus.h  antivirus.pro  antiviruswindow.cpp  antiviruswindow.h  antiviruswindow.ui  bypass.cpp  bypass.h  conf.cpp  conf.h  conf_analyse.cpp  configuredialog.cpp  configuredialog.h  configuredialog.ui  database_api.cpp  database_api.h  db.cpp  db.h  delete_from_database.cpp  dir_reader.cpp  dir_reader.h  insert_in_database.cpp  main.cpp  signature.cpp  signature.h  test.cpp  test.h  test_virus.cpp  tray_icon.qrc  virus_test_database.db
db_manager/: database_api.cpp  database_api.h
docs/html/: addfiletodbdialog_8h_source.html  analizerseparated_8h_source.html  annotated.html  annotated_dup.js  antiviruswindow_8h_source.html  bypass_8h_source.html  class_antivirus_window-members.html  class_antivirus_window.html  class_antivirus_window.js  class_signature-members.html  class_signature.html  class_signature.js  classadd_f_ile_to_d_b_dialog-members.html  classadd_f_ile_to_d_b_dialog.html  classadd_f_ile_to_d_b_dialog.js  classanalizer_separated-members.html  classanalizer_separated.html  classanalizer_separated.js  classconfigure_dialog-members.html  classconfigure_dialog.html  classconfigure_dialog.js  classes.html  conf_8h_source.html  configuredialog_8h_source.html  (+30 more)
docs/latex/: files.tex  (+22 more)
sha256/: CMakeLists.txt
sqllite/: CMakeLists.txt
tests123/: CMakeLists.txt  bypass.cpp  conf.cpp  test.cpp
(+14 files in other folders)
